Fix ALLOWED_HOSTS for Render deployment

--- a/portfolio/core/templates/core/home.html
+++ b/portfolio/core/templates/core/home.html
@@ -81,6 +81,7 @@
             <li>Bootstrap</li>
             <li>REST APIs</li>
             <li>MySQL / SQLite</li>
+            <li>Oracle</li>
           </ul>
         </div>
       </div>
