--- a/portfolio/core/templates/core/home.html
+++ b/portfolio/core/templates/core/home.html
@@ -67,7 +67,6 @@
             <li>Python</li>
             <li>C / C++</li>
             <li>JavaScript</li>
-            <li>HTML, CSS</li>
           </ul>
         </div>
       </div>
@@ -78,6 +77,8 @@
           <h4>Web & Backend</h4>
           <ul class="list-unstyled">
             <li>Django Framework</li>
+            <li>HTML / CSS</li>
+            <li>PHP/Laravel</li>
             <li>Bootstrap</li>
             <li>REST APIs</li>
             <li>MySQL / SQLite</li>
@@ -95,6 +96,8 @@
             <li>OOP (Object-Oriented Programming)</li>
             <li>Database Management Systems</li>
             <li>Operating Systems</li>
+            <li>Computer Networks</li>
+            <li>Artifical Intelligence</li>
           </ul>
         </div>
       </div>
